# icenet-gan

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/icenet_gan/: __init__.py  cli.py  icenet_gan.py
src/icenet_gan/data/: data.py
src/icenet_gan/lightning/: checkpoints.py
src/icenet_gan/models/: cli.py  losses.py  metrics.py  model_wrapper.py  models.py  predict.py  train.py
src/icenet_gan/models/networks/: pytorch.py
tests/: __init__.py  test_icenet_gan.py
