[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icenet_gan"
version = "0.0.1"
description = "Reference implementation of Generative Advesarial Network using PyTorch for IceNet library and ecosystem."
readme = "README.rst"
authors = [
  {name = "Bryn Noel Ubald", email = "bryald@bas.ac.uk"}
]
maintainers = [
  {name = "Bryn Noel Ubald", email = "bryald@bas.ac.uk"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/bnubald/icenet_gan/issues"
changelog = "https://github.com/bnubald/icenet_gan/blob/master/changelog.md"
homepage = "https://github.com/bnubald/icenet_gan"

[project.scripts]
icenetgan_train = "icenet_gan.models.train:pytorch_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

